2008-10-07 Ingo Renner  <ingo@typo3.org>

	* changed the widget view helper to require the real names of application and widget
	* added a method in the template engine so that view helpers get variables handed over to them if needed
	* added a thumbnail action to the group profile's image widget

2008-10-07 Frank Naegler  <typo3@naegler.net>

	* localize onlineFriendsWidget and added error message, if no friend is online
	* added interfaces and hooks for the ProfileActions-Widgets

2008-10-07 Ingo Renner  <ingo@typo3.org>

	* added a method to the user gateway to find a user's online friends
	* added caching of already retrieved users to the user gateway
	* added a "who of my friends is online" widget
	* fixed the interfaces for additional user/group profile actions, added documentation
	* implemented a method in the application manager to get an instance of a specific widget of an application
	* introduced a method in the abstract application controller to set the requested user
	* added a WIDGET: viewhelper that can execute - guess what - a widget

2008-10-06 Ingo Renner  <ingo@typo3.org>

	* changed the name of the general sttings branch in TS ffrom common to general
	* added a description field to the create group application
	* initial refactoring of the edit group application
	* fixed the counting of members/admins/pending members in the group model
	* fixed the group profile actions widget to fit the new group model API
	* renamed the groupOverview page property to groupList

2008-10-06 Frank Naegler  <typo3@naegler.net>

	* some changes due to the refactoring of the group model
	* changed the method name from getAllMember to getMembers in tx_community_view_groupprofile_MemberList
	* added ViewHelper to listgroup
	* fix mm tabale name in groupmodel for function getMembers()

2008-10-05 Ingo Renner  <ingo@typo3.org>

	* fixes for the group model
	* fixed the create group application to fit the refactored group model
	* fixed XCLASS definitions