@@ -68,6 +68,28 @@ class tx_community_controller_userprofile_ImageWidget extends tx_community_contr
 
 		return $view->render();
 	}
+
+	/**
+	 * renders a thumbnail version of the user's image
+	 *
+	 * @return	string	the thumbnail image as HTML tag
+	 * @author	Ingo Renner <ingo@typo3.org>
+	 */
+	public function thumbnailAction() {
+		$requestedUser = $this->communityApplication->getRequestedUser();
+		$widgetTypoScriptConfiguration = $this->communityApplication->getWidgetTypoScriptConfiguration($this->name);
+
+		$profileImageConfiguration = array(
+			$widgetTypoScriptConfiguration['thumbnail'],
+			$widgetTypoScriptConfiguration['thumbnail.']
+		);
+		$profileImageConfiguration[1]['file'] = $requestedUser->getImage();
+
+		$view = t3lib_div::makeInstance('tx_community_view_userprofile_ContentObjectImage');
+		$view->setImageConfiguration($profileImageConfiguration);
+
+		return $view->render();
+	}
 }
 
 
